# wpfTimeController

./: .gitignore  About.xaml  About.xaml.cs  App.xaml  App.xaml.cs  HelpForm.xaml  HelpForm.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  ReduceMainForm.xaml  ReduceMainForm.xaml.cs  TrackApplicationForm.xaml  TrackApplicationForm.xaml.cs  UnlockForm.xaml.cs  packages.config  wpfTimeController.csproj  wpfTimeController.sln
Model/: AppInfo.cs  ControlTask.cs  ProcessInfo.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Service/: IProcessService.cs  ProcessesService.cs
Themes/: Dictionary1.xaml
ViewModel/: MainWindowViewModel.cs  ProcessItemViewModel.cs
Views/: AboutForm.xaml  AboutForm.xaml.cs  BlackListApplicationForm.xaml  BlackListApplicationForm.xaml.cs  HelpForm.xaml  HelpForm.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ReduceMainForm.xaml.cs  TrackApplicationForm.xaml  TrackApplicationForm.xaml.cs  UnlockForm.xaml  UnlockForm.xaml.cs
timeControllerService/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  msvcpch.cmake  timeControllerService.cpp  timeControllerService.sln  timeControllerService.vcxproj  timeControllerService.vcxproj.filters  timeControllerServiceInstaller.cpp  timeControllerServiceInstaller.h
timeControllerService/DB/: CMakeLists.txt  DBRuleService.cpp  DBRuleService.h  DBSQL.h  LOG.sql  RuleModel.cpp  RuleModel.h  RuleService.cpp  RuleService.h  RuleService2.cpp  Sqlite3Helper.cpp  common.h  dbtest.cpp  log.db  log.s3db  rule.db
timeControllerService/Timer/: CMakeLists.txt  LogQueueClass.cpp  LogQueueClass.h  Timer.cpp  Timer.h  pscmd.c  pscmd.cpp  pscmd.h
timeControllerService/sqlite3/: CMakeLists.txt  ServiceDBHelper.cpp  ServiceDBHelper.h  Sqlite3Helper.cpp  Sqlite3Helper.h  cmake_install.cmake  helper.cpp  helper.vcxproj  helper.vcxproj.filters
